# genealogy

./: .gitignore  .pre-commit-config.yaml  README.md  family_tree.py  genealogy.py  person.py  pyproject.toml  sample_data.json  sample_data.txt  sample_data.yml  surface.py
genealogy/: family_tree.py  family_tree_renderer.py  genealogy.py  person.py  surface.py  utils.py
tests/: expected_family_tree_renderer_render_output.txt  expected_family_tree_repr_output.txt  test_family_tree.py  test_family_tree_renderer.py
