[project]
name = "genealogy"
version = "1.0.0"
#description = "A standard for encoding family trees and a script to draw them in ASCII"
description = "A set of tools to encode family trees and draw them using ASCII art"
authors = [{ name = "Andrei Toroplean", email = "andrei.toroplean@gmail.com" }]
license = { text = "MIT" }

[project.entry-points.console_scripts]
genealogy = "genealogy.genealogy:cli"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pre-commit", "mypy"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
